# esrs

./: .env  Cargo.toml  README.md  build.rs  docker-compose.yml
configuration/: base.yaml  docker.yaml  local.yaml
htmx/: Cargo.toml  Dockerfile
htmx/public/css/: styles.css
htmx/public/js/: status-indicator.js
htmx/src/: application.rs  main.rs  utils.rs
htmx/src/routes/: jobsite.rs  websocket.rs
htmx/src/views/: mod.rs
htmx/src/views/components/: mod.rs
htmx/src/views/components/jobsite/: create.rs  edit.rs  list.rs  mod.rs  row.rs
htmx/src/views/layouts/: mod.rs
htmx/src/views/pages/: mod.rs
leptos-ssr/: Cargo.toml  Dockerfile  package-lock.json  tailwind.config.js
leptos-ssr/src/: app.rs  lib.rs  main.rs
leptos-ssr/src/views/: mod.rs
leptos-ssr/src/views/components/: mod.rs
leptos-ssr/src/views/components/jobsite/: create.rs  edit.rs  list.rs  row.rs
leptos-ssr/src/views/layouts/: mod.rs
leptos-ssr/src/views/pages/: mod.rs
leptos-ssr/style/: tailwind-output.css
migrations/: 20240911184012_initial_database_setup.down.sql  20240911184012_initial_database_setup.up.sql  20240928220133_add_snapshot_positions_table.down.sql  20240928220133_add_snapshot_positions_table.up.sql  20240929221157_add_employee_hours_table.down.sql  20240929221157_add_employee_hours_table.up.sql
models/: Cargo.toml
models/src/: lib.rs
models/src/events/: jobsite.rs
models/src/projections/: jobsite.rs  mod.rs  snapshot_position.rs
public/js/: loading-spinner.js
services/: Cargo.toml
services/src/: configuration.rs  lib.rs
src/: application.rs  configuration.rs  main.rs
src/events/: jobsite.rs  mod.rs
src/models/: jobsite.rs  mod.rs
src/routes/: jobsite.rs  mod.rs  websocket.rs
src/views/components/jobsite/: edit.rs  list.rs  row.rs
