[package]
name = "event-store-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["ssr"] }
eventstore = "3.0.0"
actix-web = "4"
actix-cors = "0.7.0"
actix-ws = "0.3.0"
actix-files = { version = "0.6.2" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
uuid = { version = "1.10.0", features = ["v4"] }

serde = { version = "1.0", features = ["derive"] }
serde-aux = "4"
serde_json = "1"

config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }

thiserror = "1"
anyhow = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-actix-web = "0.7"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "migrate",
  "bigdecimal"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls", "cookies"]
