[package]
name = "models"
version = "0.1.0"
edition = "2021"

[features]
default = ["connect"]
# default = []
connect = ["dep:sqlx", "dep:eventstore", "dep:tokio", "dep:services"]

[dependencies]
services = { path = "../services", optional = true }

eventstore = { version = "3.0.0", optional = true }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"], optional = true }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde-aux = "4"
serde_json = "1"

secrecy = { version = "0.8", features = ["serde"] }

thiserror = "1"
anyhow = "1"
tracing = { version = "0.1", features = ["log"] }
log = "0.4"

[dependencies.sqlx]
version = "0.8"
default-features = false
optional = true
features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "migrate",
  "bigdecimal"
]
